# smart_mobility_engineering_lab_12194814

./: Readme.md
week13/hci_elderly/install/: local_setup.sh  setup.sh
week13/hci_elderly/src/gesture_pub_sub/: setup.cfg  setup.py
week2/: about.md  install_humble.sh
week3/creating_ws/: create_ws.sh
week4/cli_tools/: about.md  actions.sh  install_turtlesim_rqt.bash  launching_nodes.sh  node.sh  params.sh  record_bag.sh  services.sh  topics.sh  turtlesim_rqt.sh
week4/client_libraries/: Readme.md  colcon_build_packages.sh  create_msgs_2.sh  create_msgs_py.sh  create_parm_py.sh  create_parm_py_2.sh  create_pkg.sh  create_ser_py.sh  create_sub_pub_cpp.sh  create_sub_pub_py.sh  create_ws.sh  ros2_doctor.sh
week5/: Readme.md  fibonacci_action_server.py  frames_2023-10-01_15.31.46.gv  frames_2023-10-01_15.36.10.gv  shell files.rar
week5/shell files/: action.sh  launch1.sh  script1.sh  tester.sh  tf2_install.sh  urdf.sh
week6/: about.md
week6/shell_files/: alloc.sh  fast_dds.sh  install_gazebo.sh  install_webots.sh  ros_bag_python.sh  set_webots_basic.sh  top_stat.sh
week7/: Readme.md  about.md
week7/overleaf/: fig.text
week7/w7_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week7/w7_ws/install/distance_travel/share/distance_travel/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
week7/w7_ws/log/: latest_build
week_8_mid_term/: Readme.md  run.bash
week_8_mid_term/ros2_midterm_ws/install/: local_setup.sh  setup.sh
week_8_mid_term/ros2_midterm_ws/log/: latest_build
(+86 files in other folders)
