<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distance_travel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akash@todo.todo">akash</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build Tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
